[package]
name = "kennel-cli"
version.workspace = true
publish.workspace = true
description = "Project Kennel operator CLI: the `kennel` command. Authors, inspects, signs, and compiles policies locally, and drives the per-user kenneld daemon (run/attach/stop/list) over the control socket. Unprivileged; its own crate so its dependencies stay out of the daemon's TCB."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "kennel"
path = "src/main.rs"

[dependencies]
# The control-socket wire protocol shared with the daemon (the only thing the CLI
# needs from the daemon side — never the daemon's enforcement code).
kennel-lib-control = { path = "../kennel-lib-control" }
# The runtime policy crate: settled-artefact types, verify_settled, sign_settled, keys.
kennel-lib-policy = { path = "../kennel-lib-policy" }
# The policy compiler (authoring: parse/resolve/compile/sign/lint/risks). CLI-only —
# this is what keeps the compiler out of the daemon's TCB.
kennel-lib-compile = { path = "../kennel-lib-compile" }
# The layered deployment config (search paths, trust store).
kennel-lib-config = { path = "../kennel-lib-config" }
# The masked workspace trust manifest (T2.8): pre-flight generation + `kennel review`.
# Pulls serde_json — which stays here in the CLI, out of the daemon TCB.
kennel-lib-manifest = { path = "../kennel-lib-manifest" }
# Reading per-kennel audit logs for `kennel audit`.
kennel-lib-audit = { path = "../kennel-lib-audit" }
# Thin syscall wrappers the CLI needs (uid, terminal probing) — no unsafe here.
kennel-lib-syscall = { path = "../kennel-lib-syscall" }
# The terminal-escape filter (§7.9.5 / §4.8): the CLI runs the workload's PTY output
# through it on its way to the real terminal — client-side, so the `vte` parser of
# workload-controlled bytes stays out of the daemon TCB (the daemon is a raw router).
kennel-lib-term = { path = "../kennel-lib-term" }
# Untrusted-string sanitisation (§10.3/§10.4): policy-sourced fields (reason, paths,
# hostnames) pass through `sanitise_for_log` before reaching the operator's terminal.
kennel-lib-text = { path = "../kennel-lib-text" }
# Structured `--json` output (e.g. `policy diff --json`). Lives in the CLI, OUT of the
# daemon TCB. serde for the output-wrapper derive; serde_json for the serialiser.
serde = { version = "=1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }
# Argument parser (DEPENDENCIES.md §5.1 — vendored, audited; one forbid-unsafe file,
# zero transitive deps).
lexopt = "=0.3.2"

[dev-dependencies]
# Test-only: the manpage generator's `SYNC_*` copies of the CLI command tables.
# A unit test asserts they match `COMMANDS`/`POLICY_VERBS`, so `man kennel` cannot
# drift from the CLI.
gen-man = { path = "../../tools/gen-man" }

[lints]
workspace = true
