[package]
name = "kennel-compose"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kennel-compose"
path = "src/main.rs"

[dependencies]
basic-toml         = "=0.1.10"
kennel-lib-compile = { path = "../kennel-lib-compile" }
kennel-lib-config  = { path = "../kennel-lib-config" }
kennel-lib-policy  = { path = "../kennel-lib-policy" }
termion            = "=4.0.6"
