[package]
name = "kennel-dbus-broker"
version.workspace = true
publish.workspace = true
description = "Project Kennel dbus-broker@v1: the standing D-Bus mediation service kennel (§7.7). The replacement for the per-consumer host-dbus delegate — a long-running service on the connector mesh bus. kenneld pushes one ACCEPT_SESSION per consumer to the broker's control node; the broker mints a per-session node and mediates the consumer's D-Bus frames against the real bus via the reused host-dbus mediation engine. Runs inside its own kennel, not on the host."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

autobins = false

[[bin]]
name = "dbus-broker"
path = "src/main.rs"

[dependencies]
# The binder client library: Connection, ContextManager, flat_binder_object, service wire.
kennel-lib-binder = { path = "../kennel-lib-binder" }
# The D-Bus filter types (BusRules/Filter) carried in ACCEPT_SESSION and the conduit
# frame length helper (`frame_len`) the inbound reader uses.
kennel-lib-dbus = { path = "../kennel-lib-dbus" }
# The bus-side D-Bus client for the in-crate mediation loop (`mediate`, one per session):
# the sans-IO connector (SASL handshake) and connection.
mini-sansio-dbus = "=5.0.1"
# poll(2) over the conduit + bus fds (single-threaded event loop, no per-message threads).
nix = { version = "=0.31.3", default-features = false, features = ["poll"] }

[lints]
workspace = true
