[package]
name = "kennel-host-dbus"
version.workspace = true
publish.workspace = true
description = "Project Kennel host-side D-Bus mediation delegate (§7.7.2b): the host-dbus binary and the bus-side I/O around the I/O-free kennel-lib-dbus delegate core — connect the operator's real bus, apply the kenneld-compiled filter to each typed call, demultiplex replies/signals. A SEPARATE crate from kennel-host-delegate so the D-Bus engine (and mini-sansio-dbus) never enters kenneld's dependency closure (the daemon TCB only shrinks)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

autobins = false

[[bin]]
name = "host-dbus"
path = "src/bin/host-dbus.rs"

[dependencies]
# The D-Bus mediation engine: the delegate core (filter + serial demux), message
# reconstruction, and the typed conduit frame. This bin is the bus-side I/O around it.
kennel-lib-dbus = { path = "../kennel-lib-dbus" }
# SCM_RIGHTS fd-passing: kenneld sends each conduit fd over the owner-only command socket.
kennel-lib-scm = { path = "../kennel-lib-scm" }
# The bus-side D-Bus client: the sans-IO connector (SASL handshake) and connection.
mini-sansio-dbus = "=5.0.1"
# poll(2) over the conduit + bus fds (single-threaded event loop, no per-message threads).
nix = { version = "=0.31.3", default-features = false, features = ["poll"] }

[lints]
workspace = true
