[package]
name = "kennel-init"
version.workspace = true
publish.workspace = true
description = "The kennel's uid-0 PID 1: pulls its supervision-half over binder from kenneld, forks and identity-drops the facades and the workload, confines the workload, and supervises to exit (07-2 §7.11)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "kennel-init"
path = "src/main.rs"

[dependencies]
kennel-binder = { path = "../kennel-binder" }
kennel-spawn = { path = "../kennel-spawn" }
kennel-syscall = { path = "../kennel-syscall" }

[lints]
workspace = true
