[package]
name = "kennel-landlock"
version.workspace = true
publish.workspace = true
description = "Project Kennel hand-rolled Landlock ABI: the filesystem/network LSM ruleset bindings (the fourth unsafe-bearing crate, parallel to kennel-bpf/kennel-binder), split out of kennel-syscall and re-exported by it. CODING-STANDARDS §4."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
libc = "=0.2.186"
bitflags = "=2.11.1"

[dev-dependencies]
# Tests only: fork/waitpid to apply a ruleset in a child and observe the effect.
nix = { version = "=0.31.3", default-features = false, features = ["process"] }

[lints]
workspace = true
